--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
     <a href="index.html">Chat</a>
     <a href="movies.html">Movies</a>
     <a href="comment.html">Comments</a>
-    <a href="velentine.html">surprise</a>
+    <a href="velentine.html">Surprise</a>
+    <a href="https://poki.com/">Games</a>
 
   </nav>
 
